# fedlearner

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .travis.yml  AUTHORS  Dockerfile  LICENSE  Makefile  NOTICE  README.md  config.mk.template  fedlearner-sgx-dev.dockerfile  fedlearner-sgx-release.dockerfile  integration_tests.sh  metrics.ndjson  package-lock.json  requirements.txt  setup.py
pp_lite/: BUILD.bazel  README.md  cli.py
pp_lite/data_join/: BUILD.bazel  envs.py
pp_lite/data_join/psi_ot/: BUILD.bazel  arguments.py  arguments_test.py  client.py  data_join_control_servicer.py  data_join_manager.py  data_join_server.py  data_join_server_test.py  server.py
pp_lite/data_join/psi_ot/joiner/: BUILD.bazel  hashed_data_join_servicer.py  hashed_data_joiner.py  joiner_interface.py  ot_psi_joiner.py  ot_psi_joiner_test.py  utils.py  utils_test.py
pp_lite/data_join/psi_rsa/: BUILD.bazel  psi_client.py  psi_server.py
pp_lite/data_join/psi_rsa/client/: BUILD.bazel  data_joiner.py  signer.py  signer_test.py  syncronizer.py  task_producer.py
pp_lite/data_join/psi_rsa/server/: BUILD.bazel  data_join_servicer.py  partition_reader.py  partition_reader_test.py  partition_writer.py  partition_writer_test.py  signer.py  signer_test.py  utils.py
pp_lite/data_join/utils/: BUILD.bazel  example_id_reader.py  example_id_reader_test.py  example_id_writer.py  example_id_writer_test.py  generators.py  partitioner.py  partitioner_test.py
pp_lite/deploy/: BUILD.bazel  README.md  archiver.py  certificate.py
pp_lite/deploy/configs/: BUILD.bazel  controllers.py  controllers_test.py  logging_config.py  models.proto
pp_lite/deploy/static/: BUILD.bazel  start.sh
pp_lite/deploy/test_data/: BUILD.bazel  deploy_config.yaml
pp_lite/proto/: BUILD.bazel  arguments.proto  common.proto  data_join_control_service.proto  data_join_service.proto  hashed_data_join.proto
pp_lite/rpc/: BUILD.bazel  client.py  data_join_control_client.py  hashed_data_join_client.py  server.py
pp_lite/test/: BUILD.bazel  cli_test.py  psi_ot_test.py  psi_rsa_partition_test.py  psi_rsa_test.py  trainer_test.py
pp_lite/testing/: BUILD.bazel  make_data.py
pp_lite/utils/: BUILD.bazel  decorators.py  decorators_test.py  logging_config.py  metric_collector.py  metrics.py  tools.py  tools_test.py
py_libs/: BUILD.bazel  logging_config.py  metrics.py  metrics_test.py  sdk.py
tools/tcp_grpc_proxy/cmd/grpc2tcp/: BUILD.bazel  main.go
tools/tcp_grpc_proxy/cmd/tcp2grpc/: BUILD.bazel  main.go
tools/tcp_grpc_proxy/pkg/proto/: BUILD.bazel  tunnel.proto
tools/tcp_grpc_proxy/pkg/proxy/: BUILD.bazel  grpc2tcp.go  grpc2tcp_test.go  tcp2grpc.go  tcp2grpc_test.go
web_console_v2/api/: .coveragerc  .gitignore  .yapfignore  BUILD.bazel  Makefile  README.md  checks.py  command.py  composer.py  config.py  entrypoint.py  envs.py  envs_test.py  es_configuration.py  gunicorn_config.py  left_config.py  left_manage.py  logging_conf.py  logging_config.py  manage.py  requirements.txt  requirements_dev.txt  right_config.py  right_manage.py  rpc_server.py  run_coverage.sh  run_dev.sh  run_prod.sh  server.py  test_config_a.py  test_config_b.py  test_manage_a.py  test_manage_b.py
web_console_v2/api/ci/: pylintrc
web_console_v2/api/cmds/: BUILD.bazel  flask_cli.py  gunicorn_cli.py  run_dev.sh  run_prod.sh  runtime_env.sh  supervisorctl_cli.py  supervisord.conf  supervisord_cli.py  supervisord_dev.conf
web_console_v2/api/docs/: BUILD.bazel  best_practices.md  how_to_install_python362.md  style_guide.md
web_console_v2/api/fedlearner_webconsole/: BUILD.bazel  __init__.py  app.py  app_test.py  common.py  db.py  db_test.py  envs.py  exceptions.py  exceptions_test.py  initial_db.py  initial_db_test.py  k8s_client.py
web_console_v2/api/fedlearner_webconsole/algorithm/: BUILD.bazel  apis.py  apis_test.py  fetcher.py  fetcher_test.py  models.py  models_test.py  service.py  service_test.py  utils.py
web_console_v2/api/fedlearner_webconsole/audit/: BUILD.bazel  __init__.py  apis.py  apis_test.py  decorators.py  decorators_test.py  models.py  models_test.py  services.py  services_test.py  storage.py
web_console_v2/api/fedlearner_webconsole/auth/: BUILD.bazel  apis.py  apis_test.py  models.py  services.py  services_test.py  third_party_sso.py  third_party_sso_test.py
web_console_v2/api/fedlearner_webconsole/cleanup/: BUILD.bazel  apis.py  apis_test.py  cleaner_cronjob.py  cleaner_cronjob_test.py  models.py  models_test.py  services.py  services_test.py
web_console_v2/api/fedlearner_webconsole/composer/: BUILD.bazel  apis.py  apis_test.py  composer.py  composer_service.py  composer_service_test.py  composer_test.py  context.py  context_test.py  interface.py  models.py  op_locker.py  (+10 more)
web_console_v2/api/migrations/: BUILD.bazel  env.py
web_console_v2/api/test/: auth_test.py  common.py  config_test.py  scheduler_test.py  test_auth.py  test_rpc.py  workflow_commit_test.py  workflow_template_test.py
web_console_v2/api/testing/: BUILD.bazel  common.py  dataset.py  fake_file_manager.py  fake_model_job_config.py  fake_remote_serving.py  fake_time_patcher.py  helpers.py  no_web_server_test_case.py
web_console_v2/api/tests/: BUILD.bazel  ci.sh  meta_yaml_test.py
web_console_v2/api/tools/: BUILD.bazel  json_formatter.py  project_cleanup.py  project_lookup.py  start_db.sh  variable_finder.py
web_console_v2/inspection/: BUILD.bazel  analyzer_v2.py  analyzer_v2_test.py  converter_v2.py  converter_v2_test.py  dataset_alignment.py  dataset_alignment_test.py  dataset_directory.py  dataset_directory_test.py  dataset_format_checker.py  dataset_format_checker_test.py  debug.py  envs.py  error_code.py  error_code_test.py  export_dataset.py  export_dataset_test.py  fake_data.py  feature_extraction_v2.py  feature_extraction_v2_test.py  json_schema_checker.py  json_schema_checker_test.py  partition.py  partition_test.py  psi.py  requirements.txt  sm4_encrypt.py  util.py  util_test.py
web_console_v2/inspection/analyzer/: analyzer_task.py  analyzer_task_test.py
web_console_v2/inspection/testing/: spark_test_case.py  spark_test_case_test.py
(+3398 files in other folders)
