load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "client",
    srcs = [
        "data_joiner.py",
        "signer.py",
        "syncronizer.py",
        "task_producer.py",
    ],
    visibility = ["//pp_lite:pp_lite_package"],
    deps = [
        "//pp_lite/data_join/utils",
        "//pp_lite/rpc",
        "//pp_lite/utils",
        "@common_cityhash//:pkg",
        "@common_gmpy2//:pkg",
        "@common_pandas//:pkg",
        "@common_rsa//:pkg",
    ],
)

py_test(
    name = "signer_test",
    size = "small",
    srcs = ["signer_test.py"],
    visibility = ["//pp_lite:pp_lite_package"],
    deps = ["client"],
)
