load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//web_console_v2/api:console_api_package"])

py_library(
    name = "models_lib",
    srcs = ["models.py"],
    imports = ["../.."],
    deps = [
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole/auth:models_lib",
        "//web_console_v2/api/fedlearner_webconsole/participant:models_lib",
        "//web_console_v2/api/fedlearner_webconsole/project:models_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:pp_datetime_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils/base_model:base_model_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
        "@com_google_protobuf//:protobuf_python",
        "@common_sqlalchemy//:pkg",
    ],
)

py_test(
    name = "models_lib_test",
    # TODO(gezhengqiang): tunes the perf
    size = "medium",
    srcs = [
        "models_test.py",
    ],
    imports = ["../.."],
    main = "models_test.py",
    deps = [
        ":models_lib",
        ":utils_lib",
        "//web_console_v2/api:envs_lib",
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:pp_datetime_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils/base_model:base_model_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
        "//web_console_v2/api/testing:common_lib",
        "@com_google_protobuf//:protobuf_python",
    ],
)

py_library(
    name = "service_lib",
    srcs = ["service.py"],
    imports = ["../.."],
    deps = [
        ":models_lib",
        "//web_console_v2/api/fedlearner_webconsole:exceptions_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:file_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:filtering_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:resource_name_lib",
        "@common_sqlalchemy//:pkg",
    ],
)

py_test(
    name = "service_lib_test",
    srcs = [
        "service_test.py",
    ],
    imports = ["../.."],
    main = "service_test.py",
    deps = [
        ":models_lib",
        ":service_lib",
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/testing:common_lib",
    ],
)

py_library(
    name = "fetcher_lib",
    srcs = ["fetcher.py"],
    imports = ["../.."],
    deps = [
        ":models_lib",
        ":utils_lib",
        "//web_console_v2/api:envs_lib",
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole/algorithm/transmit",
        "//web_console_v2/api/fedlearner_webconsole/participant:models_lib",
        "//web_console_v2/api/fedlearner_webconsole/project:models_lib",
        "//web_console_v2/api/fedlearner_webconsole/rpc/v2:resource_service_client_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:file_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
        "@com_github_grpc_grpc//src/python/grpcio/grpc:grpcio",
    ],
)

py_test(
    name = "fetcher_lib_test",
    srcs = [
        "fetcher_test.py",
    ],
    data = [
        "//web_console_v2/api/testing/test_data/algorithm",
    ],
    imports = ["../.."],
    main = "fetcher_test.py",
    deps = [
        ":fetcher_lib",
        ":models_lib",
        ":utils_lib",
        "//web_console_v2/api:envs_lib",
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole/algorithm/transmit",
        "//web_console_v2/api/fedlearner_webconsole/participant:models_lib",
        "//web_console_v2/api/fedlearner_webconsole/project:models_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:proto_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
        "//web_console_v2/api/testing:common_lib",
        "@com_google_protobuf//:protobuf_python",
    ],
)

py_library(
    name = "utils_lib",
    srcs = ["utils.py"],
    imports = ["../.."],
    deps = [
        "//web_console_v2/api/fedlearner_webconsole/utils:file_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:pp_datetime_lib",
        "@common_python_slugify//:pkg",
    ],
)

py_library(
    name = "apis_lib",
    srcs = ["apis.py"],
    imports = ["../.."],
    deps = [
        ":fetcher_lib",
        ":models_lib",
        ":service_lib",
        ":utils_lib",
        "//web_console_v2/api:envs_lib",
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole:exceptions_lib",
        "//web_console_v2/api/fedlearner_webconsole/algorithm/preset_algorithms:preset_algorithm_service_lib",
        "//web_console_v2/api/fedlearner_webconsole/audit:decorators_lib",
        "//web_console_v2/api/fedlearner_webconsole/auth:third_party_sso_lib",
        "//web_console_v2/api/fedlearner_webconsole/flag:models_lib",
        "//web_console_v2/api/fedlearner_webconsole/participant:models_lib",
        "//web_console_v2/api/fedlearner_webconsole/participant:services_lib",
        "//web_console_v2/api/fedlearner_webconsole/project:models_lib",
        "//web_console_v2/api/fedlearner_webconsole/rpc/v2:resource_service_client_lib",
        "//web_console_v2/api/fedlearner_webconsole/swagger:models_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:file_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:filtering_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:flask_utils_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:paginate_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:pp_datetime_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:sorting_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils/decorators:decorators_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
        "@com_github_grpc_grpc//src/python/grpcio/grpc:grpcio",
        "@com_google_protobuf//:protobuf_python",
        "@common_flask//:pkg",
        "@common_flask_restful//:pkg",
        "@common_marshmallow//:pkg",
        "@common_sqlalchemy//:pkg",
        "@common_werkzeug//:pkg",
    ],
)

py_test(
    name = "apis_lib_test",
    size = "large",
    srcs = [
        "apis_test.py",
    ],
    imports = ["../.."],
    main = "apis_test.py",
    deps = [
        ":apis_lib",
        ":models_lib",
        ":utils_lib",
        "//web_console_v2/api:envs_lib",
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole/auth:models_lib",
        "//web_console_v2/api/fedlearner_webconsole/flag:models_lib",
        "//web_console_v2/api/fedlearner_webconsole/participant:models_lib",
        "//web_console_v2/api/fedlearner_webconsole/project:models_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:filtering_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:proto_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:resource_name_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto/rpc/v2:py_proto",
        "//web_console_v2/api/testing:common_lib",
        "//web_console_v2/api/testing/rpc:client_lib",
        "@com_google_protobuf//:protobuf_python",
    ],
)
